--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -26,9 +26,14 @@
 		text-align: center;
 
 		padding: 0.5rem 1rem;
-
+		
 		a {
 			color: $accentLight;
+		}
+
+		p {
+			max-width: 82ch;
+			margin-inline: auto;
 		}
 	}
 </style>
