Add indexnow key

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,7 +9,7 @@ const schema = {
 };
 ---
 
-<Layout title="Contacto" description="Ponte en contacto conmigo">
+<Layout title="Contacto" description="Las formas de ponerte en contacto conmigo, ya sea por correo electrónico, teléfono o redes sociales.">
 	<script
 		is:inline
 		type="application/ld+json"
