--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -10,7 +10,7 @@ const schema = {
 };
 ---
 
-<Layout title="Portfolio" description="Los proyectos en los que he trabajado">
+<Layout title="Portfolio" description="Un listado de los proyectos en los que he trabajado en los últimos años, con las tecnologías utilizadas.">
 	<script
 		is:inline
 		type="application/ld+json"
