--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -41,7 +41,7 @@ const schema = {
 
 ---
 
-<Layout title="Blog" description="Artículos sobre desarrollo, tecnología y otras temáticas que pueda querer compartir.">
+<Layout title="Blog" description="Artículos sobre desarrollo, tecnología y otras temáticas que pueda querer compartir. Disclaimer de siempre: las opiniones son mías, y no representan a ninguna empresa o institución.">
 	<script is:inline type="application/ld+json" slot="head-jsonld" set:html={JSON.stringify(schema)}></script>
 
 	<h1>Blog de Ariel Costas</h1>
