--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -11,6 +11,9 @@ $background: hsl(210, 40%, 98%);
 $light: hsl(214, 64%, 98%);
 $lightAlt: hsl(0, 0%, 100%);
 
+$noteBackground: hsl(210, 40%, 96%);
+$noteText: hsl(210, 40%, 40%);
+
 $shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
 
 $floatingRadius: 0.5rem;
