--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 
-		<link rel="canonical" href={Astro.url} />
+		<link rel="canonical" href={Astro.url.toString().replace(/\.html$/, '')} />
 		<link rel="alternate" type="application/rss+xml" href="/blog.xml" />
 		<link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 
