--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -5,9 +5,10 @@ $monoFontStack: 'Fira Code', 'Consolas', monospace;
 $accent: hsl(209, 94%, 42%);
 $accentLight: hsl(215, 90%, 60%);
 $accentDark: hsl(215, 90%, 30%);
+$secondary: hsl(48, 100%, 50%);
 $dark: hsl(340, 13%, 5%);
 
-$background: hsl(210, 40%, 98%);
+$background: hsl(210, 40%, 96%);
 $light: hsl(214, 64%, 98%);
 $lightAlt: hsl(0, 0%, 100%);
 
