Update dependencies, fix path issues

--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import TechnologyBadge from "../partials/TechnologyBadge.astro";
+import Layout from "../../layouts/Layout.astro";
+import TechnologyBadge from "../../partials/TechnologyBadge.astro";
 
 const schema = {
 	"@context": "https://schema.org",
