Refactor SCSS imports to use @use syntax, update portfolio entries, and add new projects

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const { title, description } = Astro.props;
 </html>
 
 <style is:global lang="scss">
-	@import "../../styles/shared.scss";
+	@use "../../styles/shared.scss" as *;
 
 	html,
 	body {
