--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -18,7 +18,7 @@
 </footer>
 
 <style lang="scss">
-	@import "../../styles/shared.scss";
+	@use "../../styles/shared.scss" as *;
 
 	footer {
 		background-color: $dark;
