--- a/src/partials/TechnologyBadge.astro
+++ b/src/partials/TechnologyBadge.astro
@@ -9,7 +9,7 @@ interface Technology {
 export const technologies: { [key: string]: Technology } = {
 	java: {
 		name: "Java",
-		colour: "#f29111",
+		colour: "#e76f00",
 		icon: "java",
 	},
 	dotnet: {
@@ -24,7 +24,7 @@ export const technologies: { [key: string]: Technology } = {
 	},
 	mysql: {
 		name: "MySQL",
-		colour: "#f29221",
+		colour: "#3a75b0",
 		icon: "mysql",
 	},
 	mongodb: {
@@ -58,20 +58,10 @@ export const technologies: { [key: string]: Technology } = {
 		colour: "#007acc",
 		icon: "typescript",
 	},
-	webtrio: {
-		name: "Web trio",
-		colour: "#ff400c",
-		icon: "webtrio",
-	},
 	azure: {
 		name: "Azure",
 		colour: "#0089d6",
 		icon: "azure",
-	},
-	javafx: {
-		name: "JavaFX",
-		colour: "#c91e21",
-		icon: "javafx",
 	},
 	linux: {
 		name: "Linux",
