--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -7,7 +7,7 @@
 </header>
 
 <style lang="scss">
-	@import "../../styles/shared.scss";
+	@use "../../styles/shared.scss" as *;
 
 	header {
 		color: $accent;
