--- a/styles/shared.scss
+++ b/styles/shared.scss
@@ -15,6 +15,9 @@ $lightAlt: hsl(0, 0%, 100%);
 $noteBackground: hsl(210, 40%, 96%);
 $noteText: hsl(210, 40%, 40%);
 
+$warningBackground: hsl(40, 100%, 90%);
+$warningText: hsl(40, 100%, 30%);
+
 $shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
 
 $floatingRadius: 0.5rem;
