Add multilingual support to layout and footer; include alternate hreflang links

--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -17,7 +17,7 @@ const t = useTranslations(Astro.currentLocale);
 		{t.footer.sourceCodeAvailableOn} <a href="https://github.com/arielcostas/costasdev">GitHub</a>
 		{t.footer.andIsLicencedUnder} <a
 			href="https://joinup.ec.europa.eu/collection/eupl/eupl-text-11-12"
-			>{t.footer.eupl} 1.2</a
+			>{t.footer.eupl} 1.2</a>
 	</p>
 </footer>
 
