--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import "@fontsource/beiruti";
 import "@fontsource-variable/sen";
 import Header from "../partials/Header.astro";
 import Footer from "../partials/Footer.astro";
+import { getAbsoluteLocaleUrl } from "astro:i18n";
+import { getUrlWithoutLocale } from '../i18n';
 
 interface Props {
 	title: string;
@@ -10,6 +12,7 @@ interface Props {
 }
 
 const { title, description } = Astro.props;
+const urlWithoutLocale = getUrlWithoutLocale(Astro.url.pathname);
 ---
 
 <!doctype html>
@@ -20,6 +23,10 @@ const { title, description } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 
 		<link rel="canonical" href={Astro.url.toString().replace(/\.html$/, '')} />
+		<link rel="alternate" hreflang="es" href={getAbsoluteLocaleUrl("es", urlWithoutLocale)} />
+		<link rel="alternate" hreflang="en" href={getAbsoluteLocaleUrl("en", urlWithoutLocale)} />
+		<link rel="alternate" hreflang="x-default" href={getAbsoluteLocaleUrl("es", urlWithoutLocale)} />
+
 		<link rel="alternate" type="application/rss+xml" href="/blog.xml" />
 		<link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 
