--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -4,59 +4,64 @@ import { getCollection, render } from "astro:content";
 import { type GetStaticPaths } from "astro";
 
 interface Props {
-    entry: any;
+  entry: any;
 }
 
-export const getStaticPaths: GetStaticPaths = (async () => {
-	const entries = await getCollection("blog");
-	return entries.map((entry: any) => ({
-		params: { id: entry.id },
-		props: { entry },
-	}));
-});
+export const getStaticPaths: GetStaticPaths = async () => {
+  const entries = await getCollection("blog");
+  return entries.map((entry: any) => ({
+    params: { id: entry.id },
+    props: { entry },
+  }));
+};
 
 const { entry } = Astro.props;
 const { Content } = await render(entry);
 const formattedDate = new Date(entry.data.publishedAt).toLocaleDateString(
-	"es-ES",
-	{
-		year: "numeric",
-		month: "long",
-		day: "numeric",
-		weekday: "long",
-	},
+  "es-ES",
+  {
+    year: "numeric",
+    month: "long",
+    day: "numeric",
+    weekday: "long",
+  },
 );
 
 const schema = {
-	"@context": "https://schema.org",
-	"@type": "BlogPosting",
-	headline: entry.data.title,
-	datePublished: entry.data.publishedAt.toISOString(),
-	author: {
-		"@type": "Person",
-		name: "Ariel Costas Guerrero",
-	},
-	publisher: {
-		"@type": "Person",
-		name: "Ariel Costas Guerrero",
-		logo: {
-			"@type": "ImageObject",
-			url: "https://www.costas.dev/favicon.png",
-		},
-	},
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  headline: entry.data.title,
+  datePublished: entry.data.publishedAt.toISOString(),
+  author: {
+    "@type": "Person",
+    name: "Ariel Costas Guerrero",
+  },
+  publisher: {
+    "@type": "Person",
+    name: "Ariel Costas Guerrero",
+    logo: {
+      "@type": "ImageObject",
+      url: "https://www.costas.dev/favicon.png",
+    },
+  },
 };
 ---
 
 <Layout title={entry.data.title} description={entry.data.metaDescription}>
-	<script is:inline type="application/ld+json" slot="head-jsonld" set:html={JSON.stringify(schema)}></script>
+  <script
+    is:inline
+    type="application/ld+json"
+    slot="head-jsonld"
+    set:html={JSON.stringify(schema)}
+  />
 
-	<h1>{entry.data.title}</h1>
-	<small>
-		Publicado el
-		<time datetime={entry.data.publishedAt.toISOString()}>
-			{formattedDate}
-		</time>
-	</small>
+  <h1>{entry.data.title}</h1>
+  <small>
+    Publicado el
+    <time datetime={entry.data.publishedAt.toISOString()}>
+      {formattedDate}
+    </time>
+  </small>
 
-	<Content />
+  <Content />
 </Layout>
