New article, fix sass

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,7 +71,8 @@ const urlWithoutLocale = getUrlWithoutLocale(Astro.url.pathname);
 </html>
 
 <style is:global lang="scss">
-  @use "../../styles/shared.scss" as *;
+  @use "../../styles/variables" as *;
+  @use "../../styles/shared";
   @use "sass:color";
 
   html,
