--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -28,7 +28,7 @@ const t = useTranslations(Astro.currentLocale);
 </footer>
 
 <style lang="scss">
-  @use "../../styles/shared.scss" as *;
+  @use "../../styles/variables" as *;
 
   footer {
     background-color: $dark;
