--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -20,7 +20,7 @@ const t = useTranslations(Astro.currentLocale);
 </header>
 
 <style lang="scss">
-  @use "../../styles/shared.scss" as *;
+  @use "../../styles/variables" as *;
 
   header {
     color: $accent;
